--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^1.1.2
   url_launcher: ^6.3.2
   timeline_tile: ^2.0.0
+  google_fonts: ^6.3.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
